fix (MessageBoxFunctionalLayout): when rendering a Loader component (#4212)
inside a confirm button of MessageBoxFunctionalLayout component,
the layout breaks and the button "jumps up".

--- a/src/MessageBox/FunctionalLayout/FooterLayout.scss
+++ b/src/MessageBox/FunctionalLayout/FooterLayout.scss
@@ -8,6 +8,8 @@
 }
 
 .footerbuttons {
+  display: flex;
+  align-items: center;
   margin-left: auto;
   flex-shrink: 0;
 
